# maykin-django-utils

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  tox.ini
docs/: conf.py  index.rst  quickstart.rst
docs/utils/: checks.rst  context_processors.rst  django_two_factor_auth.rst  migration_operations.rst  mixins.rst  pdf.rst  validators.rst  views.rst
maykin_django_utils/: apps.py  migration_operations.py  pdf.py  validators.py  views.py
maykin_django_utils/tests/: test_celery_beat.py  test_templatetags.py  test_validators.py
testapp/: settings.py
tests/: test_2fa.py  test_mixins.py  test_not_imported.py  test_pdf.py
